# cpp-tasks

./: Board.cpp  Board.hpp  CMakeLists.txt  City.cpp  Color.cpp  Dispatcher.cpp  Dispatcher.hpp  FieldDoctor.cpp  FieldDoctor.hpp  GeneSplicer.cpp  GeneSplicer.hpp  Makefile  Medic.cpp  Medic.hpp  OperationsExpert.cpp  OperationsExpert.hpp  Player.cpp  Player.hpp  Researcher.cpp  Researcher.hpp  Scientist.cpp  Scientist.hpp  Test.cpp  Virologist.cpp  Virologist.hpp  main.cpp  test1  test2  test3
BT_Iterator/: CMakeLists.txt  main.cpp
BT_Iterator/sources/: BinaryTree.hpp
MessageBoard/: Board.cpp  Board.hpp  CMakeLists.txt  main  main.cpp
Numbers_w_units/: NumberWithUnits.cpp  NumberWithUnits.hpp  test1  test2  test3
Pandemic_Game/: Demo1.cpp  Demo2.cpp  Test.cpp
Pandemic_Game/sources/: Board.cpp  Board.hpp  Color.hpp  Dispatcher.cpp  FieldDoctor.cpp  FieldDoctor.hpp  GeneSplicer.cpp  GeneSplicer.hpp  Medic.cpp  Medic.hpp  OperationsExpert.hpp  Player.hpp  Researcher.cpp  Researcher.hpp  Scientist.cpp  Scientist.hpp  Virologist.hpp
sources/: BinaryTree.hpp  Board.cpp  Board.hpp  City.hpp  Dispatcher.hpp  OperationsExpert.cpp  Player.cpp  Virologist.cpp
